--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
 }
 
 body {
-  background: linear-gradient(135deg, #0f0f0f, #111, #090909);
+  background: black;
   color: #f5f5f5;
   overflow-x: hidden;
 }
@@ -280,11 +280,12 @@ footer {
 
 video {
   height: 22rem;
-  width:32rem;
+  width:auto;
 }
 
 .video {
   display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
 }
