--- a/style.css
+++ b/style.css
@@ -284,12 +284,38 @@ video {
 }
 
 .video {
+  padding: 0.9rem 1.2rem;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  animation: bgImage 10s ease;
+}
+
+@keyframes bgImage {
+  0% { background-image: url('png\ whisper.png');
+    background-size: cover;
+    background-position: center;
+  }
+  100% {background: black;}
 }
 
 .video h2 {
   text-align:center;
+
+}
+
+.gmail {
+  margin: 0.6rem 0.8rem;
+  font-weight: 900;
+}
+
+.video a {
+  text-decoration: none;
+  font-weight: 900;
+  background: linear-gradient(155deg, #00fff0, #0070ff);
+  color: black;
+  padding: 0.8rem 1rem;
+  border-radius: 10px;
+  margin: 0.6rem 0.8rem;
 }
