--- a/style.css
+++ b/style.css
@@ -289,15 +289,20 @@ video {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  animation: bgImage 10s ease infinite;
+  background: linear-gradient(-45deg, #0f2027, #203a43, #2c5364, #000000);
+  animation: bgImage 1s ease infinite;
 }
 
 @keyframes bgImage {
-  0% { background-image: url('png\ whisper.png');
-    background-size: cover;
-    background-position: center;
+  0% {
+    background-position: 0% 50%;
   }
-  100% {background: black;}
+  50% {
+    background-position: 100% 50%;
+  }
+  100% {
+    background-position: 0% 50%;
+  }
 }
 
 .video h2 {
