--- a/style.css
+++ b/style.css
@@ -74,7 +74,7 @@ a:hover {
 *{ margin: 0; padding: 0; box-sizing: border-box; font-family: "Poppins", sans-serif; }
 
 
-body { background: linear-gradient(135deg, #0f172a 50%, #1e3a8a 50%); color: #e2e8f0; padding: 40px 20px; min-height: 100vh; animation: bgPulse 10s infinite alternate ease-in-out; }
+body { background: black}
 
 /* HEADER */ .header { text-align: center; margin-bottom: 50px; animation: fadeDrop 1.3s ease forwards; }
 
